Bug 464514 - KAddressBook crash on LDAP import/search menu configuration button
Summary: KAddressBook crash on LDAP import/search menu configuration button
Status: RESOLVED FIXED
Alias: None
Product: kaddressbook
Classification: Applications
Component: general (other bugs)
Version First Reported In: unspecified
Platform: Debian testing Linux
: NOR crash
Target Milestone: ---
Assignee: kdepim bugs
URL:
Keywords: drkonqi
Depends on:
Blocks:
 
Reported: 2023-01-19 17:44 UTC by Johannes Falke
Modified: 2023-01-19 19:28 UTC (History)
1 user (show)

See Also:
Latest Commit:
Version Fixed/Implemented In: 22.12.2
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Johannes Falke 2023-01-19 17:44:09 UTC
Application: kaddressbook (5.22.0 (22.12.0))

Qt Version: 5.15.7
Frameworks Version: 5.101.0
Operating System: Linux 6.0.0-6-amd64 x86_64
Windowing System: X11
Distribution: Debian GNU/Linux bookworm/sid
DrKonqi: 5.26.5 [KCrashBackend]

-- Information about the crash:
I have KAddressBook configured with one LDAP server (which incidentally doesn't seem to work properly when searching).

If I go to "File->Import from LDAP" and press the button to configure ldap, KAddressBook crashes.

The crash can be reproduced every time.

-- Backtrace:
Application: KAddressBook (kaddressbook), signal: Aborted

[KCrash Handler]
#4  __pthread_kill_implementation (threadid=<optimized out>, signo=signo@entry=6, no_tid=no_tid@entry=0) at ./nptl/pthread_kill.c:44
#5  0x00007f8dea2a9d2f in __pthread_kill_internal (signo=6, threadid=<optimized out>) at ./nptl/pthread_kill.c:78
#6  0x00007f8dea25aef2 in __GI_raise (sig=sig@entry=6) at ../sysdeps/posix/raise.c:26
#7  0x00007f8dea245472 in __GI_abort () at ./stdlib/abort.c:79
#8  0x00007f8de8499e44 in ?? () from /lib/x86_64-linux-gnu/libdbus-1.so.3
#9  0x00007f8de84bc740 in _dbus_warn_check_failed () from /lib/x86_64-linux-gnu/libdbus-1.so.3
#10 0x00007f8de84abf9f in dbus_message_new_method_call () from /lib/x86_64-linux-gnu/libdbus-1.so.3
#11 0x00007f8dea99ec21 in ?? () from /lib/x86_64-linux-gnu/libQt5DBus.so.5
#12 0x00007f8dea99854d in ?? () from /lib/x86_64-linux-gnu/libQt5DBus.so.5
#13 0x00007f8dea99b2a8 in ?? () from /lib/x86_64-linux-gnu/libQt5DBus.so.5
#14 0x00007f8dea99b67d in ?? () from /lib/x86_64-linux-gnu/libQt5DBus.so.5
#15 0x00007f8dea9a6e87 in ?? () from /lib/x86_64-linux-gnu/libQt5DBus.so.5
#16 0x00007f8dea9a6fd5 in QDBusInterface::QDBusInterface(QString const&, QString const&, QString const&, QDBusConnection const&, QObject*) () from /lib/x86_64-linux-gnu/libQt5DBus.so.5
#17 0x00007f8de9e5e774 in ?? () from /lib/x86_64-linux-gnu/libKF5KCMUtils.so.5
#18 0x00007f8de9e5f038 in KCModuleProxy::realModule() const () from /lib/x86_64-linux-gnu/libKF5KCMUtils.so.5
#19 0x00007f8de9e6554d in KCMultiDialog::addModule(KPluginMetaData const&, QStringList const&) () from /lib/x86_64-linux-gnu/libKF5KCMUtils.so.5
#20 0x00007f8de9e65cda in KCMultiDialog::addModule(KPluginMetaData const&) () from /lib/x86_64-linux-gnu/libKF5KCMUtils.so.5
#21 0x00007f8de9fa7556 in PimCommon::LdapSearchDialog::slotUser2() () from /lib/x86_64-linux-gnu/libKF5PimCommonAkonadi.so.5abi1
#22 0x00007f8dea6e8fcf in ?? () from /lib/x86_64-linux-gnu/libQt5Core.so.5
#23 0x00007f8deb454d32 in QAbstractButton::clicked(bool) () from /lib/x86_64-linux-gnu/libQt5Widgets.so.5
#24 0x00007f8deb454f9a in ?? () from /lib/x86_64-linux-gnu/libQt5Widgets.so.5
#25 0x00007f8deb456b28 in ?? () from /lib/x86_64-linux-gnu/libQt5Widgets.so.5
#26 0x00007f8deb456d47 in QAbstractButton::mouseReleaseEvent(QMouseEvent*) () from /lib/x86_64-linux-gnu/libQt5Widgets.so.5
#27 0x00007f8deb3a4ce8 in QWidget::event(QEvent*) () from /lib/x86_64-linux-gnu/libQt5Widgets.so.5
#28 0x00007f8deb362f5e in QApplicationPrivate::notify_helper(QObject*, QEvent*) () from /lib/x86_64-linux-gnu/libQt5Widgets.so.5
#29 0x00007f8deb36b502 in QApplication::notify(QObject*, QEvent*) () from /lib/x86_64-linux-gnu/libQt5Widgets.so.5
#30 0x00007f8dea6b17c8 in QCoreApplication::notifyInternal2(QObject*, QEvent*) () from /lib/x86_64-linux-gnu/libQt5Core.so.5
#31 0x00007f8deb36960e in QApplicationPrivate::sendMouseEvent(QWidget*, QMouseEvent*, QWidget*, QWidget*, QWidget**, QPointer<QWidget>&, bool, bool) () from /lib/x86_64-linux-gnu/libQt5Widgets.so.5
#32 0x00007f8deb3bdaf8 in ?? () from /lib/x86_64-linux-gnu/libQt5Widgets.so.5
#33 0x00007f8deb3c0e80 in ?? () from /lib/x86_64-linux-gnu/libQt5Widgets.so.5
#34 0x00007f8deb362f5e in QApplicationPrivate::notify_helper(QObject*, QEvent*) () from /lib/x86_64-linux-gnu/libQt5Widgets.so.5
#35 0x00007f8dea6b17c8 in QCoreApplication::notifyInternal2(QObject*, QEvent*) () from /lib/x86_64-linux-gnu/libQt5Core.so.5
#36 0x00007f8deab3d55d in QGuiApplicationPrivate::processMouseEvent(QWindowSystemInterfacePrivate::MouseEvent*) () from /lib/x86_64-linux-gnu/libQt5Gui.so.5
#37 0x00007f8deab11e1c in QWindowSystemInterface::sendWindowSystemEvents(QFlags<QEventLoop::ProcessEventsFlag>) () from /lib/x86_64-linux-gnu/libQt5Gui.so.5
#38 0x00007f8de2cfbc6a in ?? () from /lib/x86_64-linux-gnu/libQt5XcbQpa.so.5
#39 0x00007f8de85d77a9 in g_main_context_dispatch () from /lib/x86_64-linux-gnu/libglib-2.0.so.0
#40 0x00007f8de85d7a38 in ?? () from /lib/x86_64-linux-gnu/libglib-2.0.so.0
#41 0x00007f8de85d7acc in g_main_context_iteration () from /lib/x86_64-linux-gnu/libglib-2.0.so.0
#42 0x00007f8dea7098b6 in QEventDispatcherGlib::processEvents(QFlags<QEventLoop::ProcessEventsFlag>) () from /lib/x86_64-linux-gnu/libQt5Core.so.5
#43 0x00007f8dea6b024b in QEventLoop::exec(QFlags<QEventLoop::ProcessEventsFlag>) () from /lib/x86_64-linux-gnu/libQt5Core.so.5
#44 0x00007f8deb56b8a7 in QDialog::exec() () from /lib/x86_64-linux-gnu/libQt5Widgets.so.5
#45 0x00007f8dab7b8c29 in ?? () from /usr/lib/x86_64-linux-gnu/qt5/plugins/pim5/kaddressbook/importexportplugin/kaddressbook_importexportldapplugin.so
#46 0x00007f8dea6e8fcf in ?? () from /lib/x86_64-linux-gnu/libQt5Core.so.5
#47 0x00007f8debdb118f in PimCommon::AbstractGenericPluginInterface::emitPluginActivated(PimCommon::AbstractGenericPluginInterface*) () from /lib/x86_64-linux-gnu/libKF5PimCommon.so.5abi2
#48 0x00007f8dea6e8fcf in ?? () from /lib/x86_64-linux-gnu/libQt5Core.so.5
#49 0x00007f8deb35c782 in QAction::triggered(bool) () from /lib/x86_64-linux-gnu/libQt5Widgets.so.5
#50 0x00007f8deb35f3ab in QAction::activate(QAction::ActionEvent) () from /lib/x86_64-linux-gnu/libQt5Widgets.so.5
#51 0x00007f8deb4e38d2 in ?? () from /lib/x86_64-linux-gnu/libQt5Widgets.so.5
#52 0x00007f8deb4eb704 in ?? () from /lib/x86_64-linux-gnu/libQt5Widgets.so.5
#53 0x00007f8deb3a4ce8 in QWidget::event(QEvent*) () from /lib/x86_64-linux-gnu/libQt5Widgets.so.5
#54 0x00007f8deb362f5e in QApplicationPrivate::notify_helper(QObject*, QEvent*) () from /lib/x86_64-linux-gnu/libQt5Widgets.so.5
#55 0x00007f8deb36b502 in QApplication::notify(QObject*, QEvent*) () from /lib/x86_64-linux-gnu/libQt5Widgets.so.5
#56 0x00007f8dea6b17c8 in QCoreApplication::notifyInternal2(QObject*, QEvent*) () from /lib/x86_64-linux-gnu/libQt5Core.so.5
#57 0x00007f8deb36960e in QApplicationPrivate::sendMouseEvent(QWidget*, QMouseEvent*, QWidget*, QWidget*, QWidget**, QPointer<QWidget>&, bool, bool) () from /lib/x86_64-linux-gnu/libQt5Widgets.so.5
#58 0x00007f8deb3bdf45 in ?? () from /lib/x86_64-linux-gnu/libQt5Widgets.so.5
#59 0x00007f8deb3c0e80 in ?? () from /lib/x86_64-linux-gnu/libQt5Widgets.so.5
#60 0x00007f8deb362f5e in QApplicationPrivate::notify_helper(QObject*, QEvent*) () from /lib/x86_64-linux-gnu/libQt5Widgets.so.5
#61 0x00007f8dea6b17c8 in QCoreApplication::notifyInternal2(QObject*, QEvent*) () from /lib/x86_64-linux-gnu/libQt5Core.so.5
#62 0x00007f8deab3d55d in QGuiApplicationPrivate::processMouseEvent(QWindowSystemInterfacePrivate::MouseEvent*) () from /lib/x86_64-linux-gnu/libQt5Gui.so.5
#63 0x00007f8deab11e1c in QWindowSystemInterface::sendWindowSystemEvents(QFlags<QEventLoop::ProcessEventsFlag>) () from /lib/x86_64-linux-gnu/libQt5Gui.so.5
#64 0x00007f8de2cfbc6a in ?? () from /lib/x86_64-linux-gnu/libQt5XcbQpa.so.5
#65 0x00007f8de85d77a9 in g_main_context_dispatch () from /lib/x86_64-linux-gnu/libglib-2.0.so.0
#66 0x00007f8de85d7a38 in ?? () from /lib/x86_64-linux-gnu/libglib-2.0.so.0
#67 0x00007f8de85d7acc in g_main_context_iteration () from /lib/x86_64-linux-gnu/libglib-2.0.so.0
#68 0x00007f8dea7098b6 in QEventDispatcherGlib::processEvents(QFlags<QEventLoop::ProcessEventsFlag>) () from /lib/x86_64-linux-gnu/libQt5Core.so.5
#69 0x00007f8dea6b024b in QEventLoop::exec(QFlags<QEventLoop::ProcessEventsFlag>) () from /lib/x86_64-linux-gnu/libQt5Core.so.5
#70 0x00007f8dea6b83b6 in QCoreApplication::exec() () from /lib/x86_64-linux-gnu/libQt5Core.so.5
#71 0x000055769c4be02b in ?? ()
#72 0x00007f8dea24618a in __libc_start_call_main (main=main@entry=0x55769c4bdc50, argc=argc@entry=1, argv=argv@entry=0x7fffc3384718) at ../sysdeps/nptl/libc_start_call_main.h:58
#73 0x00007f8dea246245 in __libc_start_main_impl (main=0x55769c4bdc50, argc=1, argv=0x7fffc3384718, init=<optimized out>, fini=<optimized out>, rtld_fini=<optimized out>, stack_end=0x7fffc3384708) at ../csu/libc-start.c:381
#74 0x000055769c4be2c1 in ?? ()
[Inferior 1 (process 103164) detached]

Reported using DrKonqi
Comment 1 Johannes Falke 2023-01-19 17:56:52 UTC
Doing the same thing from KMail yields an error modal with the message:

"Could not find plugin pim/kcms/kaddressbook/kcm_ldap"

The directory of kcm_ldap.so I found is "/usr/lib/x86_64-linux-gnu/qt5/plugins/pim5/kcms/kaddressbook/kcm_ldap.so"

Could the "pim" vs "pim5" directory name be the issue?
Comment 2 Laurent Montel 2023-01-19 19:28:44 UTC
Git commit b677ea51aef7d831cdcb3dd5d2b7ac162a01947a by Laurent Montel.
Committed on 19/01/2023 at 19:28.
Pushed by mlaurent into branch 'release/22.12'.

Fix KAddressBook crash on LDAP import/search menu configuration button
FIXED-IN: 22.12.2

M  +1    -1    src/pimcommonakonadi/ldap/ldapsearchdialog.cpp

https://invent.kde.org/pim/pimcommon/commit/b677ea51aef7d831cdcb3dd5d2b7ac162a01947a