Fix KAddressBook crash on LDAP import/search menu configuration button

BUG: 464514
FIXED-IN: 22.12.2